# bettercf

./: .gitignore  Makefile  README.md  foo.json  pyproject.toml  setup.cfg  setup.py  temp_config.json
.circleci/: config.yml
.dfm/: template_builder.json
.management/: bettercf-management.json
.management/systems/bettercf-management/: base_template.json
.management/systems/bettercf-management/resources/s3/bucket/: management_bucket.json
.management/systems/management/s3/bucket/: management_bucket.json
.management/systems/management/ssm/parameter/: management_bucket_name_param.json  management_bucket_url_param.json
.management/templates/bettercf-management/: base_template.json
.management/templates/bettercf-management/resources/ssm/parameter/: management_bucket_name_param.json
config/: example.json
examples/: README.md
examples/example_1/templates/hello_world_app/: base_template.json
examples/example_2/stack_config/: hello_world_s3_config.json
examples/example_2/template/: hello_world_s3_bucket.json
real_src/: config.py  initialisation.py  system.py
src/: account.py  cli.py  config.py  file_handling.py  initialisation.py  region.py  stack.py  system.py  template.py  utils.py  version.py
src/bettercf/: cli.py  initialisation.py  override.py  stack.py  template.py  utils.py  version.py
systems/foo/: base.json
tests/: conftest.py  test_account.py  test_config.py  test_initialisation.py  test_override.py  test_region.py  test_stack.py  test_system.py  test_template.py  test_utils.py  test_version.py
tests/test_configs/: config.json  config_blank_env_type.json  config_blank_id.json  config_blank_region.json  config_blank_role_arn.json  config_blank_system_name.json  config_blank_system_version.json  config_blank_version.json  config_incomplete.json
tests/test_stack_configs/: config.json  config_blank_env_type.json  config_blank_id.json  config_blank_region.json  config_blank_role_arn.json  config_blank_system_name.json  config_blank_system_version.json  config_blank_version.json  config_incomplete.json
tests/test_systems/systems/foo/: base_template.json
tests/test_templates/: foo.json
(+3 files in other folders)
