[tool.poetry]
name = "cloudformation-state-management"
version = "0.1.0"
description = ""
authors = ["ServerlessSam <samuel.t.lock@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
boto3 = "^1.24.86"
data-file-merge = "^0.3"
black = "^22.12.0"
isort = "^5.12.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pyinstaller = "^5.7.0"

[tool.poetry.dev-dependencies]
moto = {extras = ["cloudformation", "s3", "ssm"], version = "^4.0.13"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
