[tool.poetry]
name = "cloudformation-state-management"
version = "0.1.0"
description = ""
authors = ["ServerlessSam <samuel.t.lock@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
boto3 = "^1.24.86"
data-file-merge = "^0.3"

[tool.poetry.dev-dependencies]
moto = {extras = ["cloudformation", "s3", "ssm"], version = "^4.0.13"}
black = "^22.12.0"
isort = "^5.12.0"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pyinstaller = "^5.7.0"
pytest = "*"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
(
  /(
    \.git
    | \.pytest_cache
    | venv
    | .venv
    | migrations
  )/
)
'''

[tool.isort]
line_length = 88
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/.venv/*"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
